--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Kathan's App</title>
+	<link rel="icon" href="https://img.icons8.com/officel/16/000000/apk.png" >
 </head>
 <body bgcolor="green">
 	<h1>Download first APK of Kathan Majithia</h1>
